update production.rb file and style.css file to resolve heroku not showing background image

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -3,7 +3,7 @@
 body {
   padding-left: 20px;
   background-color: white;
-  background-image: image-url('/assets/City_Landscape_Background.jpg');
+  background-image: url('/assets/City_Landscape_Background.jpg');
   background-size: cover;
   font-family: 'Comfortaa', cursive;
 }
